--- a/app/stylesheets/login.scss
+++ b/app/stylesheets/login.scss
@@ -1,10 +1,10 @@
-@import "_basic";
+@import "partials/base";
 #content {
   background: url(/images/login-background.png) top center no-repeat;
   height: 590px;
   width: 900px !important;
   .wrapper, .customerWrapper {
-    .rounded;
+    @include rounded;
     background-color: #E5EEFB !important;
     width: 390px;
     min-height: 300px;
@@ -21,9 +21,9 @@
   }
   form {
     background-color: transparent !important;
-    dl dt { .grid(12,0,1); }
+    dl dt { @include grid(12,0,1); }
     dl dt label { display: block; }
-    dl dd { .grid(20); }
+    dl dd { @include grid(20); }
     .current_password { margin-top: 20px; font-size: 12px; }
   }
   
@@ -41,6 +41,6 @@
     display: block;
     margin: 25px 25px 0px 25px;
     padding: 10px;
-    .rounded;
+    @include rounded;
   }
 }
