--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -1,20 +1,201 @@
-// This import applies a global reset to any page that imports this stylesheet.
-@import "blueprint/reset";
-
-// To configure blueprint, edit the partials/_base.sass file.
+/* Welcome to Compass.
+ * In this file you should write your main styles. (or centralize your imports)
+ * Import this file using the following HTML or equivalent:
+ * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+@import "partials/reset";
 @import "partials/base";
+@import "fancy-buttons";
 
-// Import all the default blueprint modules so that we can access their mixins.
-@import "blueprint";
 
-// Import the non-default scaffolding module.
-@import "blueprint/scaffolding";
+html { height: 100% ;}
+body {
+  background-color: white;
+  letter-spacing: 0.8px;
+  @include gradient(#EFF6FF, #4A6A83);
+  min-height: 100%;
+  height: 100%;
+}
+body, p, ol, ul, td {
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size:   13px;
+  line-height: 18px;
+}
+div#navigation {
+  div.container { @include container; }
+  height: 50px;
+  background-color: $blueDark;
+  margin-bottom: 40px;
+  ul {
+    padding-top: 10px;
+    li {
+      @include grid(15,0,1);
+      @include roundedTop;
+      @include gradient(#1D88D8, #005DAA);
+      a { color: white; }
+      line-height: 40px;
+      font-size: 16px;
+      text-align: center;
+      background-color: #E2EBF5;
+    }
+    li.active {
+      @include gradient(transparent, transparent);
+      background-color: #E2EBF5;
+      a { color: $orange; }
+    }
+    li.small {
+      @include grid(8,0,1);
+      font-size: 12px;
+      line-height: 18px;
+      margin-top: 22px;
+    }
+    li.user {
+      @include gradient(transparent, transparent);
+      @include grid(15,0,1);
+      border: none;
+      font-size: 12px;
+      line-height: 22px;
+      background-color: transparent;
+      color: white;
+      margin-top: 18px;
+    }
+  }
+}
 
-// Generate the blueprint framework according to your configuration:
-@include blueprint;
+// ALLGEMEINE CONTENT ELEMENTE //
+div#content {
+  @include container;
+  @include rounded;
+  background-color: white;
+  padding: 30px;
+  width: 900px;
+  div.wizard {
+    @include rounded;
+    margin-bottom: 20px;
+    padding: 10px;
+    background-color: $blueMedium;
+    color: $blueDark;
+  }
+  form {
+    @include rounded;
+    background-color: $blueLight;
+    padding: 10px;
+    input.submit {
+        background: url("/images/submit.gif") no-repeat scroll center top transparent;
+        border: 0 none;
+        color: white;
+        height: 22px;
+        width: 165px;
+        margin: 10px 0px;
+    }
+  }
 
-@include blueprint-scaffolding;
+  div.toolbar {
+    @include rounded();
+    background-color: $blueLight;
+    color: blueMedium;
+    padding: 0px 10px;
+    margin-bottom: 5px;
+    height: 30px;
+    li { line-height: 30px; }
+  }
+  
+  ul.title, div.content {
+    background-color: $blueLight;
+    padding: 10px;
+  }
+  ul.title#active {
+    background-color: $blueMedium;
+    @include roundedTop;
+    @include roundedBottom(0px);
+    font-weight: bold;
+  }
+  ul.title { @include rounded; }
+}
 
-form {
-  display: none;
+div.filter {
+  margin-left: 20px;
+  li {
+    @include grid(15,0,1);
+    @include roundedTop;
+    background-color: $blueMedium;
+    line-height: 30px;
+    text-align: center;
+  }
+  li.active { background-color: $blueLight; }
+}
+
+
+
+
+
+
+body { background-color: #fff; color: #333; }
+
+body, p, ol, ul, td {
+  font-family: verdana, arial, helvetica, sans-serif !important;
+  font-size:   13px !important;
+  line-height: 18px !important;
+}
+
+a { color: #000; }
+a:visited { color: #000; }
+
+div.field, div.actions {
+  margin-bottom: 10px;
+}
+
+#notice {
+  color: green;
+}
+
+.field_with_errors { display: inline; }
+.field_with_errors input {
+  border: 1px solid darkred;
+  background-color: #FF6F6F;
+}
+
+#error_explanation {
+  @include rounded;
+  border: 2px solid darkred;
+  padding: 7px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+}
+
+#error_explanation h2 {
+  text-align: left;
+  font-weight: bold;
+  padding: 5px 5px 5px 15px;
+  font-size: 12px;
+  margin: -7px;
+  margin-bottom: 0px;
+  background-color: #FF6F6F;
+  color: darkred;
+}
+#error_explanation ul {
+  margin-left: 20px !important;
+}
+#error_explanation ul li {
+  font-size: 12px;
+  list-style: square;
+}
+div#flash div {
+  display: inline;
+  padding: 10px 10px 0px;
+  margin-left: 40px;
+}
+div#flash div.notice { 
+  @include roundedTop;
+  border-top: 2px solid #77FF6F;
+  border-left: 2px solid #77FF6F;
+  border-right: 2px solid #77FF6F;
+  background-color: #B3FFAF;
+}
+div#flash div.alert { 
+  @include roundedTop;
+  border-top: 2px solid darkred;
+  border-left: 2px solid darkred;
+  border-right: 2px solid darkred;
+  background-color: #FF6F6F;
 }
