--- a/app/views/layouts/customers.html.haml
+++ b/app/views/layouts/customers.html.haml
@@ -3,8 +3,8 @@
 %head
   %meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
   %title Nancy
-  %link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/nancy.less'}
-  %link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/customers.less'}
+  %link{:rel => 'stylesheet', :type => 'text/css', :media => "screen", :href => '/stylesheets/compiled/screen.css'}
+  %link{:rel => 'stylesheet', :type => 'text/css', :media => "screen", :href => '/stylesheets/compiled/customers.css'}
   = javascript_include_tag :defaults
   = stylesheet_link_tag :all
   = csrf_meta_tag
