Add AJAX-features in WorksController: I miss tests in affect of capybara errors on @javascript tagged scenarios

--- a/app/views/works/_worklist.html.haml
+++ b/app/views/works/_worklist.html.haml
@@ -6,5 +6,5 @@
     %li.customer= link_to work.project.customer.name, work.project.customer
     %li.description= work.description
     %li.actions
-      = link_to image_tag("/images/icons/delete.gif"), work, :method => :delete, :remote => false
+      = link_to image_tag("/images/icons/delete.gif"), work, :method => :delete, :remote => true
     .clear
