--- a/app/views/works/_calendar.html.haml
+++ b/app/views/works/_calendar.html.haml
@@ -1,13 +1,13 @@
 %h2#calendarYear Year #{@daySelected.year}
 .clear
-%ul#calendar
+%ul#calendarWeek
   -7.times do
-    %li{:class=>"wday#{@dayCalendar.wday}", :id => "#{'active' if @daySelected == @dayCalendar}" }= link_to @dayCalendar.strftime("%a. %d.%m."), { :controller => :works, :action => :index, :date => @dayCalendar.strftime("%Y-%m-%d") }, :remote => false
+    %li{:class=>"wday#{@dayCalendar.wday}", :id => "#{'active' if @daySelected == @dayCalendar}" }= link_to @dayCalendar.strftime("%a. %d.%m."), { :controller => :works, :action => :index, :date => @dayCalendar.strftime("%Y-%m-%d") }, :remote => true
     -@dayCalendar = @dayCalendar.+(1)
-  %li#calendarWeek
-    = link_to image_tag("/images/icons/calendarweek-prev10.gif"), works_path(:date => @jumping_links.[]("prev10")), :remote => false
-    = link_to image_tag("/images/icons/calendarweek-prev.gif"), works_path(:date => @jumping_links.[]("prev")), :remote => false
+  %li#calendarNavigation
+    = link_to image_tag("/images/icons/calendarweek-prev10.gif"), works_path(:date => @jumping_links.[]("prev10")), :remote => true
+    = link_to image_tag("/images/icons/calendarweek-prev.gif"), works_path(:date => @jumping_links.[]("prev")), :remote => true
     %span Calendarweek #{@daySelected.-(1).cweek}
-    = link_to image_tag("/images/icons/calendarweek-next.gif"), works_path(:date => @jumping_links.[]("next")), :remote => false
-    = link_to image_tag("/images/icons/calendarweek-next10.gif"), works_path(:date => @jumping_links.[]("next10")), :remote => false
+    = link_to image_tag("/images/icons/calendarweek-next.gif"), works_path(:date => @jumping_links.[]("next")), :remote => true
+    = link_to image_tag("/images/icons/calendarweek-next10.gif"), works_path(:date => @jumping_links.[]("next10")), :remote => true
   .clear
