--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
     %title Nancy / #{@controller.controller_name}
     = stylesheet_link_tag("compiled/screen.css")
-    = stylesheet_link_tag("compiled/login.css")
+    = stylesheet_link_tag("compiled/#{@controller.controller_name}") if File.exist?("tmp/stylesheets/compiled/#{@controller.controller_name}.css")
     = javascript_include_tag :defaults
     = stylesheet_link_tag :all
     = csrf_meta_tag
@@ -12,10 +12,9 @@
     #navigation
       .container
         = display_navigation(@controller.controller_name) if user_signed_in?
+    .container#flash
+      - flash.each do |key, value|
+        %div{:class => key}= value  
     .container#content
-      .clear
-      .wrapper
-        - flash.each do |key, value|
-          %div{:class => key}= value
-        = yield
+      = yield
     .clear
