--- a/app/views/settings/user/_form.html.haml
+++ b/app/views/settings/user/_form.html.haml
@@ -20,5 +20,8 @@
   %dd= f.password_field :password
   %dt= f.label :password_confirmation, "Password Confirmation"
   %dd= f.password_field :password_confirmation
+  %dd.role
+    = f.label :role
+    = f.select(:role, options_for_select(["trainee", "worker", "admin"], @user.role))
   %dt.submit= f.submit "Save User", :class => "submit"
   .clear
