--- a/app/views/customers/contacts/_list.html.haml
+++ b/app/views/customers/contacts/_list.html.haml
@@ -2,7 +2,7 @@
   .details{:style => "display: #{@displayContactsRecord || 'block'};"}
     %h2 Contacts
     %span.actions
-      = link_to image_tag("/images/icons/contact-create.gif"), new_customer_location_contact_path(@customer, @location, :order => params[:order])
+      = link_to image_tag("/images/icons/contact-create.gif"), new_customer_location_contact_path(@customer, @location, :order => params[:order]) if can? :manage, Contact
     %hr.clear/
     %ul.toolbar
       %li.name Name
@@ -22,7 +22,7 @@
             %span= "Mobile: #{contact.mobile}"
         %li.actions
           = mail_to contact.email, image_tag("/images/icons/mail.gif")
-          = link_to image_tag("/images/icons/edit.gif"), edit_customer_location_contact_path(@customer, @location, contact, :order => params[:order])
-          = link_to image_tag("/images/icons/delete.gif"), customer_location_contact_path(@customer, @location, contact, :order => params[:order]), :confirm => 'Are you sure?', :method => :delete
+          = link_to image_tag("/images/icons/edit.gif"), edit_customer_location_contact_path(@customer, @location, contact, :order => params[:order]) if can? :manage, Contact
+          = link_to image_tag("/images/icons/delete.gif"), customer_location_contact_path(@customer, @location, contact, :order => params[:order]), :confirm => 'Are you sure?', :method => :delete if can? :manage, Contact
         .clear
-  = render :partial => 'customers/contacts/form'
+  = render :partial => 'customers/contacts/form' if can? :manage, Contact
