--- a/app/views/projects/_list.html.haml
+++ b/app/views/projects/_list.html.haml
@@ -32,8 +32,8 @@
         %li.date= project.created_at.strftime("%Y-%m-%d")
         %li.actions
           = link_to image_tag("/images/icons/container-close.gif"), projects_path(:order => params[:order], :closed => params[:closed])
-          = link_to image_tag("/images/icons/edit.gif"), edit_project_path(project, :order => params[:order], :closed => params[:closed])
-          = link_to image_tag("/images/icons/delete.gif"), project_path(project, :order => params[:order], :closed => params[:closed]), :confirm => 'Are you sure?', :method => :delete
+          = link_to image_tag("/images/icons/edit.gif"), edit_project_path(project, :order => params[:order], :closed => params[:closed]) if can? :manage, Project
+          = link_to image_tag("/images/icons/delete.gif"), project_path(project, :order => params[:order], :closed => params[:closed]), :confirm => 'Are you sure?', :method => :delete if can? :manage, Project
         .clear
       .content
         .main
@@ -41,9 +41,9 @@
           %span.actions
             = link_to image_tag("/images/icons/project-report.gif"), report_project_path(project)
             -if project.closed == 0
-              = link_to image_tag("/images/icons/project-open.gif"), switch_project_path(project, :order => params[:order], :closed => params[:closed])
+              = link_to image_tag("/images/icons/project-open.gif"), switch_project_path(project, :order => params[:order], :closed => params[:closed]) if can? :manage, Project
             -else
-              = link_to image_tag("/images/icons/project-close.gif"), switch_project_path(project, :order => params[:order], :closed => params[:closed])
+              = link_to image_tag("/images/icons/project-close.gif"), switch_project_path(project, :order => params[:order], :closed => params[:closed]) if can? :manage, Project
           %hr.clear/
           %dl
             %dt.description Description:
@@ -66,6 +66,6 @@
         %li.date= project.created_at.strftime("%Y-%m-%d")
         %li.actions
           = link_to image_tag("/images/icons/container-open.gif"), project_path(project, :order => params[:order], :closed => params[:closed])
-          = link_to image_tag("/images/icons/edit.gif"), edit_project_path(project, :order => params[:order], :closed => params[:closed])
-          = link_to image_tag("/images/icons/delete.gif"), project_path(project, :order => params[:order], :closed => params[:closed]), :confirm => 'Are you sure?', :method => :delete
+          = link_to image_tag("/images/icons/edit.gif"), edit_project_path(project, :order => params[:order], :closed => params[:closed]) if can? :manage, Project
+          = link_to image_tag("/images/icons/delete.gif"), project_path(project, :order => params[:order], :closed => params[:closed]), :confirm => 'Are you sure?', :method => :delete if can? :manage, Project
         .clear
