--- a/app/views/settings/user/index.html.haml
+++ b/app/views/settings/user/index.html.haml
@@ -1,7 +1,7 @@
 .filter
   %ul
     %li.active= link_to "Manage Users", settings_user_admin_index_path
-    %li= link_to "Managae Holidays", settings_day_sequences_path
+    %li= link_to "Managae Holidays", settings_days_path
     .clear
 #userForm
   - if @user.new_record?
