Improve Nancy's Interfacedesign

--- a/app/stylesheets/contacts.scss
+++ b/app/stylesheets/contacts.scss
@@ -39,7 +39,7 @@ div.customer {
 
     div.location {
       @include roundedTop;
-      border-top: 5px solid $grey;
+      border-top: 2px solid grey;
       padding: 10px;
       
       .details {
@@ -70,8 +70,10 @@ div.customer {
     }
     div.contacts {
       @include roundedTop;
-      padding: 10px;
-      border-top: 5px solid $grey;
+      padding: 0px;
+      border-top: 2px solid grey;
+	  legend {padding:5px 0px 7px 15px;}
+	  a {margin-left: -25px; margin-top:5px;}
       ul {
         li { @include grid(26); }
         li.name, li.fon {
