--- a/app/stylesheets/partials/_base.scss
+++ b/app/stylesheets/partials/_base.scss
@@ -4,6 +4,8 @@ $blueprint-grid-margin: 0px;
 $blueprint-grid-width: ($blueprint-container-size + $blueprint-grid-margin) / $blueprint-grid-columns - $blueprint-grid-margin;
 
 $blueLight: #C8D9F4;
+$blueLighter: #e4eeff;
+$blueMediumLight: #d4e1f5;
 $blueMedium: #94B4E6;
 $blueDark: #112363;
 $grey: #CCCCCC;
