--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -33,14 +33,14 @@ div#navigation {
       @include gradient(#1D88D8, #005DAA);
       a { color: white; }
       line-height: 40px;
-      font-size: 16px;
+      font-size: 15px;
       text-align: center;
       background-color: #E2EBF5;
     }
     li.active {
       @include gradient(transparent, transparent);
       background-color: #E2EBF5;
-      a { color: $orange; }
+      a { color: $orange; font-weight: bold;}
     }
     li.small {
       @include grid(8,0,1);
@@ -71,14 +71,15 @@ div#content {
   div.wizard {
     @include rounded;
     margin-bottom: 20px;
-    padding: 10px;
+    padding-top: 20px;
     background-color: $blueMedium;
     color: $blueDark;
   }
   form {
-    @include rounded;
-    background-color: $blueLight;
-    padding: 10px;
+ 	@include rounded;
+	background-color: $blueLighter;
+    padding-top: 15px;
+	padding-left: 5px;
     input.submit {
         background: url("/images/submit.gif") no-repeat scroll center top transparent;
         border: 0 none;
@@ -87,15 +88,20 @@ div#content {
         width: 165px;
         margin: 10px 0px;
     }
-  }
-
+	  }
+	form#new_customer{border-top: 5px;
+	border-color: $orange;
+	border-style: solid;
+	padding-left: 15px;}
+  
   div.toolbar {
     @include rounded();
-    background-color: $blueLight;
+    background-color: $blueLighter;
     color: blueMedium;
     padding: 0px 10px;
     margin-bottom: 5px;
     height: 30px;
+	font-weight: bold;
     li { line-height: 30px; }
   }
   
@@ -117,23 +123,25 @@ div.filter {
   li {
     @include grid(15,0,1);
     @include roundedTop;
-    background-color: $blueMedium;
+    font-weight: bold;
+	background-color: white;
     line-height: 30px;
     text-align: center;
+	a {color: $blueDark;}
+	
   }
-  li.active { background-color: $blueLight; }
+ 
+ li.active { background-color: $blueLighter; }
+  
+ 
 }
-
-
-
-
 
 
 body { background-color: #fff; color: #333; }
 
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif !important;
-  font-size:   13px !important;
+  font-size:   11px !important;
   line-height: 18px !important;
 }
 
@@ -159,11 +167,15 @@ div.field, div.actions {
   border: 2px solid darkred;
   padding: 7px;
   padding-bottom: 0;
-  margin-bottom: 20px;
+  margin-top: 15px;
+  margin-bottom: 25px;
+  margin-left: 25px;
+  margin-right: 25px;
   background-color: #f0f0f0;
 }
 
 #error_explanation h2 {
+  @include roundedTop;
   text-align: left;
   font-weight: bold;
   padding: 5px 5px 5px 15px;
@@ -174,11 +186,14 @@ div.field, div.actions {
   color: darkred;
 }
 #error_explanation ul {
-  margin-left: 20px !important;
+  margin-left: 25px !important;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 #error_explanation ul li {
   font-size: 12px;
   list-style: square;
+  padding: 3px;
 }
 div#flash div {
   display: inline;
