--- a/app/views/works/_worklist.html.haml
+++ b/app/views/works/_worklist.html.haml
@@ -8,3 +8,5 @@
     %li.actions
       = link_to image_tag("/images/icons/delete.gif"), work, :method => :delete, :remote => true
     .clear
+:javascript
+  jQuery.each($("div#works ul"), function() { $(this).find('li').height($(this).height()); });
